Bug 505417 - Panels can cover panel edit mode dialog if there's several (esp. large) ones
Summary: Panels can cover panel edit mode dialog if there's several (esp. large) ones
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Edit Mode (other bugs)
Version First Reported In: 6.4.80
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2025-06-10 07:35 UTC by cwo
Modified: 2025-10-17 20:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments
large bottom and thin right-side panel cover edit panel dialog (701.16 KB, image/png)
2025-06-10 07:35 UTC, cwo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cwo 2025-06-10 07:35:19 UTC
Created attachment 182138 [details]
large bottom and thin right-side panel cover edit panel dialog

SUMMARY

If you have several panels, esp. large ones, they can be drawn over the panel edit mode dialog, leaving them inaccessible. Floating and different auto-hide settings may also matter, I haven't exhaustively checked the combinations. Which panel the dialog is for does seem to matter somewhat, e.g. in the attached screenshot, selecting the right panel moves the dialog so that this panel won't cover it, but for other panels it will, as shown in the screen shot.

STEPS TO REPRODUCE
1. Add various panels on all screen sides 
2. Enter Edit Mode
3. Show Panel Configuration on the various panels 

OBSERVED RESULT

Dialog is covered by panels and can't be accessed

EXPECTED RESULT

Dialog is still usable and settings can be changed (for example to get it back to a more reasonable state)

SOFTWARE/OS VERSIONS

Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.0
Kernel Version: 6.14.9-300.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6200U CPU @ 2.30GHz
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: Intel® HD Graphics 520

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2025-06-10 14:58:27 UTC
Can confirm. Perhaps we should increase the Z order of the config dialog to account for issues like this. It's not idea, but it should at least be better than having the panel overlap it in cases where *some* kind of overlap is inevitable.
Comment 2 Bug Janitor Service 2025-09-22 09:08:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5830
Comment 3 Niccolò Venerandi 2025-10-14 13:44:48 UTC
Git commit 23372daf76c29e2209c7311fbad80dc628edf8fe by Niccolò Venerandi.
Committed on 14/10/2025 at 13:16.
Pushed by niccolove into branch 'master'.

Adjust availableScreenRect of Coronas for stacked panels in edit mode

When entering edit mode, panels stack on top of each other instead of
overlapping. This might cause them to get inside the available screen
rect, where they might cover other content. Instead, this commits
makes availableScreenRect update based on the edit mode status and
makes the panel setting dialog reposition based on it.

M  +3    -0    shell/panelconfigview.cpp
M  +18   -4    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/23372daf76c29e2209c7311fbad80dc628edf8fe
Comment 4 Niccolò Venerandi 2025-10-14 13:46:46 UTC
Git commit b20798ed1a8990c48282bc930af4d9452745b99d by Niccolò Venerandi.
Committed on 14/10/2025 at 13:46.
Pushed by niccolove into branch 'Plasma/6.5'.

Adjust availableScreenRect of Coronas for stacked panels in edit mode

When entering edit mode, panels stack on top of each other instead of
overlapping. This might cause them to get inside the available screen
rect, where they might cover other content. Instead, this commits
makes availableScreenRect update based on the edit mode status and
makes the panel setting dialog reposition based on it.

M  +3    -0    shell/panelconfigview.cpp
M  +18   -4    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/b20798ed1a8990c48282bc930af4d9452745b99d