Adjust availableScreenRect of Coronas for stacked panels in edit mode

When entering edit mode, panels stack on top of each other instead of
overlapping. This might cause them to get inside the available screen
rect, where they might cover other content. Instead, this commits
makes availableScreenRect update based on the edit mode status and
makes the panel setting dialog reposition based on it.

BUG:505417